--- a/package.json
+++ b/package.json
@@ -6,5 +6,21 @@
   "repository": "https://github.com/BrenonOrtega/NLW4-NodeJS.git",
   "author": "Brenon Ortega",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "scripts": {
+    "dev": "npx ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
+  },
+  "dependencies": {
+    "eslint": "^7.21.0",
+    "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2",
+    "ts-node-dev": "^1.1.6",
+    "typeorm": "^0.2.31"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11",
+    "typescript": "^4.2.3"
+  }
 }
