--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "npx ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
-    "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "typeorm": "ts-node-dev node_modules\\typeorm\\cli.js"
   },
   "dependencies": {
     "eslint": "^7.21.0",
@@ -17,7 +17,8 @@
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "ts-node-dev": "^1.1.6",
-    "typeorm": "^0.2.31"
+    "typeorm": "^0.2.31",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
