--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "sqlite3": "^5.0.2",
     "ts-node-dev": "^1.1.6",
     "typeorm": "^0.2.31",
+    "uuid": "^8.3.2",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/uuid": "^8.3.0",
     "typescript": "^4.2.3"
   }
 }
